--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇦 加拿大-1.02MB/s(Youtube:不良林), server: 196.247.59.154, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-438.1KB/s(Youtube:不良林), server: node-us-c-01.texo.network, port: 8443, type: trojan, password: 91fc891c-510f-3a1b-aa77-9bee2c759522, sni: node-us-c-01.texo.network, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.95MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-1.07MB/s(Youtube:不良林), server: bai-piao-wang-zhe12.98848.xyz, port: 36736, type: vmess, uuid: 50a9c98e-8c48-4680-feff-a7ea34705ae9, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ytryr6, ws-headers: {Host: bai-piao-wang-zhe12.98848.xyz}}
-  - {name: 🇨🇳 中国-271.6KB/s(Youtube:不良林), server: 120.241.236.113, port: 16246, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-708.0KB/s(Youtube:不良林), server: sz-cm-kl.hinetwork.tw, port: 11217, type: trojan, password: 258f1db1-a4bc-3cab-ac7b-0ebc681c0580, sni: sz-cm-kl.hinetwork.tw, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-6.16MB/s(Youtube:不良林), server: sz-cm-kl.hinetwork.tw, port: 11187, type: trojan, password: 258f1db1-a4bc-3cab-ac7b-0ebc681c0580, sni: sz-cm-kl.hinetwork.tw, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-4.00MB/s(Youtube:不良林), server: sz-cm-kl.hinetwork.tw, port: 11211, type: trojan, password: 258f1db1-a4bc-3cab-ac7b-0ebc681c0580, sni: sz-cm-kl.hinetwork.tw, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.69MB/s(Youtube:不良林), server: sz-cm-kl.hinetwork.tw, port: 11191, type: trojan, password: 258f1db1-a4bc-3cab-ac7b-0ebc681c0580, sni: sz-cm-kl.hinetwork.tw, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.00MB/s(Youtube:不良林), server: sz-cm-kl.hinetwork.tw, port: 11216, type: trojan, password: 258f1db1-a4bc-3cab-ac7b-0ebc681c0580, sni: sz-cm-kl.hinetwork.tw, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.88MB/s(Youtube:不良林), server: sz-cm-kl.hinetwork.tw, port: 11196, type: trojan, password: 258f1db1-a4bc-3cab-ac7b-0ebc681c0580, sni: sz-cm-kl.hinetwork.tw, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-1.16MB/s(Youtube:不良林), server: 134.195.196.85, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇺🇸 美国-1.51MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-308.7KB/s(Youtube:不良林), server: 196.247.59.154, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-315.2KB/s(Youtube:不良林), server: 120.233.150.146, port: 65073, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
+  - {name: 🇨🇳 中国-2.80MB/s(Youtube:不良林), server: in-us-1.onebox6.org, port: 38401, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-us-1.onebox6.org}}
+  - {name: 🇯🇵 日本-1.69MB/s(Youtube:不良林), server: jp2.autlinzh.xyz, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: jp2.autlinzh.xyz, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-788.7KB/s(Youtube:不良林), server: 196.247.59.154, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-636.3KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-397.6KB/s(Youtube:不良林), server: 120.241.236.113, port: 16215, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-438.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.95MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-271.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-708.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.88MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-308.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-315.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.80MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.69MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-788.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-636.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-397.6KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇦 加拿大-1.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-438.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.95MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-271.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-708.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.88MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-308.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-315.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.80MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.69MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-788.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-636.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-397.6KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-438.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.95MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-271.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-708.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.88MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-308.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-315.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.80MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.69MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-788.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-636.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-397.6KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇦 加拿大-1.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-438.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.95MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-271.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-708.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.88MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-308.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-315.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.80MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.69MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-788.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-636.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-397.6KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-438.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.95MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-271.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-708.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.88MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-308.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-315.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.80MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.69MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-788.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-636.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-397.6KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-1.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-438.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.95MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-271.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-708.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.88MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-308.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-315.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.80MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.69MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-788.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-636.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-397.6KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-1.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-438.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.95MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-271.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-708.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.88MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-308.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-315.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.80MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.69MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-788.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-636.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-397.6KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
